# masterproject

./: CMakeLists.txt  Ghana_Jump.sln  README.md
.circleci/: config.yml
Ghana_Jump/: AbstractFactory.h  Background.cpp  Background.h  Bonus.cpp  Bonus.h  BonusFactory.h  BonusView.cpp  BonusView.h  Camera.cpp  Camera.h  CollisionVisitor.cpp  CollisionVisitor.h  DynamicPlatform.cpp  DynamicPlatform.h  Entity.cpp  Entity.h  EntityView.h  EntityVisitor.h  Game.cpp  Game.h  Ghana_Jump.cpp  Ghana_Jump.vcxproj  Ghana_Jump.vcxproj.filters  GrayPlatform.cpp  GrayPlatform.h  GrayPlatformFactory.h  HorizontalPlatform.cpp  HorizontalPlatform.h  HorizontalPlatformFactory.h  Observer.h  Platform.cpp  Platform.h  PlatformView.cpp  PlatformView.h  Player.cpp  Player.h  PlayerFactory.h  PlayerView.cpp  PlayerView.h  Random.cpp  (+15 more)
Ghana_Jump/x64/Debug/: Ghana_Jump.exe.recipe  Ghana_Jump.ilk  Ghana_Jump.vcxproj.FileListAbsolute.txt  Ghana_Jump.vcxproj.cppwinrt_comp.rsp  vc143.idb
Ghana_Jump/x64/Debug/Ghana_Jump.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Ghana_Jump.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
